tests/baselines/reference/contextualTypeAny.errors.txt
tests/cases/compiler/contextualTypeAny.ts(3,5): error TS2322: Type '{ p: string; q: any; }' is not assignable to type '{ [s: string]: number; }'.
  Property 'p' is incompatible with index signature.
    Type 'string' is not assignable to type 'number'.


==== tests/cases/compiler/contextualTypeAny.ts (1 errors) ====
    var x: any;
    
    var obj: { [s: string]: number } = { p: "", q: x };
        ~~~
!!! error TS2322: Type '{ p: string; q: any; }' is not assignable to type '{ [s: string]: number; }'.
!!! error TS2322:   Property 'p' is incompatible with index signature.
!!! error TS2322:     Type 'string' is not assignable to type 'number'.
    
    var arr: number[] = ["", x];